# dspy-exploration

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  test.py
src/: combined_pred.py  double_tuning.py  first_steps.py  optimized_prompt.jinja  schaden_objekt_prediction.py  sd_typ_kennung_prediction.py  simple_prompt.jinja  struct_preds.py
